OP-7: checkbox visibility fix, added district field, starting on view experiments

--- a/web/modules/custom/jcc_case/css/case.css
+++ b/web/modules/custom/jcc_case/css/case.css
@@ -1,7 +1,7 @@
-.js-form-item-document-upload :not(.form-checkboxes):not(td):not(.media-library-item__click-to-select-checkbox):not(.field-content)>.form-type--checkbox .checkbox-toggle {
-  display:none;
+.jcc-opinions-importer-form :not(.form-checkboxes):not(td):not(.media-library-item__click-to-select-checkbox):not(.field-content) > .form-type--checkbox .form-checkbox:not(.jcc-case-form__field)+.checkbox-toggle {
+  display: none;
 }
 
-.js-form-item-document-upload .remove-button{
+.jcc-opinions-importer-form .remove-button {
   display: none;
 }
